--- a/style.css
+++ b/style.css
@@ -76,6 +76,15 @@ body {
   line-height: 1.5;
   font-size: 0.875rem;
 }
+
+.dark {
+  color: var(--clr-grey-1);
+}
+
+.light {
+  color: var(--clr-grey-10);
+  text-align: center;
+}
 ul {
   list-style-type: none;
 }
@@ -104,12 +113,15 @@ h1 {
 }
 h2 {
   font-size: 2rem;
+  
 }
 h3 {
   font-size: 1.25rem;
+  color: var(--clr-grey-10);
 }
 h4 {
   font-size: 0.875rem;
+  text-align: center;
 }
 p {
   margin-bottom: 1.25rem;
@@ -339,7 +351,8 @@ header {
 #about,
 #services,
 #gallery,
-#areas {
+#areas,
+#contact {
   padding: 50px 20px;
 
 }
@@ -370,7 +383,12 @@ header {
 .about-image{
   width: 35%;
   height: 100%;
-  
+
+ 
+}
+
+.about-image img{
+ margin-bottom: 1rem;
  
 }
 
@@ -411,7 +429,7 @@ header {
 
  
   .service-container {
-    margin-top: 50px;
+    margin: 50px 0;
     display: flex;
     flex-wrap: wrap;
     gap: 1em;
@@ -437,15 +455,124 @@ header {
 /**************************************G*A*L*L*E*R*Y*******************************************/
 #gallery {
   width: 100%;
+  min-height: 100vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+ 
 }
 
-#gallery img {
-  object-fit: cover;
-  width: 300px;
-  height: 300px;
+
+
+.gallery-container{
+  margin-top: 50px;
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
+  gap: 1rem;
 }
+
+
+
 
 /**************************************G*A*L*L*E*R*Y*******************************************/
+
+/**************************************A*R*E*A*S******************************************/
+#areas {
+  width: 100%;
+  background-image: url(images/wood1.jpeg);
+  min-height: 100vh;
+  display: flex;
+  align-items: center;
+  justify-items: center;
+}
+
+.fa-car {
+  color: #fff;;
+}
+
+.areas-container {
+  width: 100%;
+ }
+
+.areas-boxes {
+  margin-top: 50px;
+  display: flex;
+  width: 100%;
+ color: #fff;
+ justify-content: center;
+}
+
+.areas-list{
+  width: 60%;
+  
+  display: flex;
+ justify-content: space-between;
+
+}
+
+.area-box {
+  width: 40%;
+ 
+  
+}
+
+.areas-boxes ul {
+  list-style-type: circle;
+}
+
+@media (max-width:800px) {
+  .areas-list{
+    width: 100%;
+   
+  
+  }
+}
+/**************************************A*R*E*A*S******************************************/
+
+
+/**************************************C*O*N*T*A*C*T****************************************/
+#contact {
+  width: 100%;
+  display: flex;
+  min-height: 100vh;
+  justify-content: space-around;
+  
+}
+
+
+.form-conatiner{
+  width: 70%;
+  
+}
+
+.contact-image {
+  width: 30%;
+  background-image: url(images/inspeccion-de-estructuras.jpg);
+}
+
+@media (max-width:800px) {
+  #contact {
+    width: 100%;
+    flex-direction: column;
+    justify-content: center;
+    
+  }
+
+  .form-conatiner{
+    width: 100%;
+    
+  }
+  
+  .contact-image {
+    margin-top: 50px;
+    width: 100%;
+    background-image: url(images/inspeccion-de-estructuras.jpg);
+  }
+}
+
+/**************************************C*O*N*T*A*C*T****************************************/
 
 footer {
   background: var(--clr-grey-1);
