--- a/style.css
+++ b/style.css
@@ -465,7 +465,7 @@ header {
 
 
 .gallery-container{
-  margin-top: 50px;
+  margin: 50px 0;
   width: 100%;
   display: flex;
   justify-content: space-between;
