--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@ Fonts
 ===============
 */
 @import url("https://fonts.googleapis.com/css?family=Open+Sans|Roboto:400,700&display=swap");
-
+@import url('https://fonts.googleapis.com/css2?family=Bungee+Shade&display=swap');
 /*
 =============== 
 Variables
@@ -75,6 +75,9 @@ body {
   color: var(--clr-grey-1);
   line-height: 1.5;
   font-size: 0.875rem;
+}
+.name {
+  font-family: 'Bungee Shade', cursive;
 }
 
 .dark {
@@ -154,7 +157,7 @@ p {
 
 .btn {
   text-transform: uppercase;
-  background: transparent;
+  background:var(--clr-primary-10);
   color: var(--clr-black);
   padding: 0.375rem 0.75rem;
   letter-spacing: var(--spacing);
@@ -171,7 +174,7 @@ p {
   background: var(--clr-black);
 }
 .btn-white {
-  color: var(--clr-white);
+  color: var(--clr-black);
   border-color: var(--clr-white);
   border-radius: 0;
   padding: 0.5rem 1rem;
@@ -312,22 +315,22 @@ nav {
 /* hero */
 header {
   min-height: 100vh;
-  background: linear-gradient(rgba(63, 208, 212, 0.5), rgba(0, 0, 0, 0.7)),
-    url(images/bg.jpg) center/cover no-repeat;
-    /*background-image: url(bg.jpg);
-    background-position: center;
-    background-size: cover;
-    background-repeat: no-repeat;*/
+  background:
+    url(images/home1.jpg) center/cover no-repeat;
+    
 }
 .banner {
   min-height: 100vh;
   display: grid;
   place-items: center;
-  text-align: center;
+  
 }
 .container h1 {
   color: var(--clr-white);
   text-transform: uppercase;
+  background: var(--clr-grey-1);
+  opacity: 0.8;
+  padding: 20px;
 }
 .container p {
   color: var(--clr-white);
@@ -514,15 +517,20 @@ header {
 
 .area-box {
   width: 40%;
- 
+  margin: 20px 0;
   
 }
 
 .areas-boxes ul {
   list-style-type: circle;
+  font-weight: bold;
 }
 
 @media (max-width:800px) {
+  #areas {
+    width: 100%;
+    padding: 50px 5px;
+  }
   .areas-list{
     width: 100%;
    
