--- a/style.css
+++ b/style.css
@@ -156,14 +156,14 @@ p {
 /*  global classes */
 .btn {
   text-transform: uppercase;
-  background:var(--clr-primary-1);
-  color: var(--clr-white);
+  background: transparent;
+  color: var(--clr-black);
   padding: 0.375rem 0.75rem;
   letter-spacing: var(--spacing);
   display: inline-block;
   transition: var(--transition);
   font-size: 0.875rem;
-  border: 2px solid var(--clr-primary-10);
+  border: 2px solid var(--clr-black);
   cursor: pointer;
   box-shadow: 0 1px 3px rgba(0, 0, 0, 0.2);
   border-radius: var(--radius);
@@ -174,12 +174,12 @@ p {
 }
 .btn-white {
   color: var(--clr-white);
-  border-color: var(--clr-red-dark);
+  border-color: var(--clr-white);
   border-radius: 0;
   padding: 0.5rem 1rem;
 }
 .btn:hover {
-  background: var(--clr-primary-3);
+  background: var(--clr-white);
   color: var(--clr-secondary);
 }
 
@@ -328,7 +328,7 @@ header {
 .container h1 {
   color: var(--clr-white);
   text-transform: uppercase;
-  text-shadow: 4px 4px var(--clr-red-dark);
+
 
 }
 .container p {
