--- a/style.css
+++ b/style.css
@@ -316,7 +316,7 @@ nav {
 header {
   min-height: 100vh;
   background: linear-gradient(rgba(63, 208, 212, 0.5), rgba(0, 0, 0, 0.7)),
-    url(images/home1.jpg) center/cover no-repeat;
+    url(images/KAREN.jpg) center/cover no-repeat;
     
 }
 .banner {
