--- a/style.css
+++ b/style.css
@@ -43,6 +43,7 @@ body {
 #about {
    height: 100vh;
   display: flex;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
 }
