--- a/style.css
+++ b/style.css
@@ -36,6 +36,7 @@ body {
 }
 
 /* section */
+
 .section {
   padding-bottom: 5rem;
 }
@@ -46,6 +47,7 @@ body {
   flex-direction: column;
   justify-content: center;
   align-items: center;
+padding: 40px 0;
 }
 
 #services,
@@ -53,6 +55,7 @@ body {
 #contact {
   height: auto;
   padding: 40px 0;
+  
 }
 #services,
 #contact {
