--- a/css/skin-architecture-one-page.css
+++ b/css/skin-architecture-one-page.css
@@ -604,7 +604,7 @@ body,
 	.header .header,
 	.header .header-inner,
 	.header.header-transparent .header-inner{
-		background-color: #fff;
+		background-color: rgb(107, 105, 105);
 	}
 	.header .header-inner{
 		border-bottom: 1px solid #eee;
